sh2c/tests/fixtures/diag_span_set_undecl.sh2
func main() {
    set y = 1; // Error: undeclared
}
